kubernetes/web/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend-deployment
  labels:
    name: web-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-frontend
  template:
    metadata:
      labels:
        app: web-frontend
    spec:
      containers:
        - env:
          image: mjajod2/web-frontend:latest
          imagePullPolicy: Always
          name: web-frontend
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
