kubernetes/web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-frontend-service
  labels:
    service: web-frontend
spec:
  selector:
    app: web-frontend
  type: LoadBalancer 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
